<resources>
    <string name="app_name">Come With Me</string>

    <!-- STRINGS FOR LOGIN -->
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="NotRegistered">Not registred yet?</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="fieldnecesary">All fields are necessary</string>
    <string name="title_activity_home">Home</string>

    <string name="title_activity_register">Welcome to Come withMe</string>
    <string name="edit_name">Enter your name</string>


    <string-array name="schools_array">
        <item>ETSECCPB</item>
        <item>ETSETB</item>
        <item>FIB</item>
    </string-array>

    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>

    <string name="edit_email">Enter your email</string>
    <string name="text_gender">Enter your gender</string>
    <string name="button_send">OK</string>


    <string name="menu_email">Email</string>
    <string name="menu_info">Info</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="button_signup">SIGN UP</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thrusday">Thrusday</string>
    <string name="friday">Friday</string>
    <string name="tupper">Tupper</string>
    <string name="bar">Bar</string>
    <string name="indif">Indifferent</string>
    <string name="outdoors">Outdoors</string>
    <string name="indoors">Indoors</string>
    <string name="indifPlace">Indifferent</string>

    <string-array name="hours_array">
        <item>12:00-12:30</item>
        <item>12:30-13:00</item>
        <item>13:00-13:30</item>
        <item>13:00-13:30</item>
        <item>13:30-14:00</item>
        <item>14:00-14:30</item>
        <item>14:30-15:00</item>
        <item>15:00-15:30</item>
        <item>15:30-16:00</item>
        <item>16:00-16:30</item>
        <item>16:30-17:00</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
